--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@tanstack/react-virtual": "^3.11.0",
     "@tiptap/extension-code-block-lowlight": "^2.10.3",
     "@tiptap/extension-highlight": "^2.10.3",
     "@tiptap/extension-image": "^2.10.3",
@@ -17,6 +19,7 @@
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/uuid": "^10.0.0",
     "@yoopta/blockquote": "^4.9.2",
     "@yoopta/code": "^4.9.2",
     "@yoopta/editor": "^4.9.2",
@@ -24,8 +27,12 @@
     "@yoopta/lists": "^4.9.2",
     "@yoopta/marks": "^4.9.2",
     "@yoopta/paragraph": "^4.9.2",
+    "axios": "^1.7.9",
+    "compression": "^1.7.5",
+    "firebase": "^11.0.2",
     "lowlight": "^3.2.0",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.468.0",
+    "node-cache": "^5.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
@@ -34,14 +41,17 @@
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
     "slate": "^0.102.0",
-    "slate-react": "^0.102.0"
+    "slate-react": "^0.102.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/compression": "^1.7.5",
     "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "firebase-tools": "^13.28.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
