--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,25 @@
 {
   "name": "mindfeed-server",
   "version": "1.0.0",
-  "type": "commonjs",
+  "description": "MindFeed Server with LightRAG Integration",
+  "main": "server.ts",
   "scripts": {
     "start": "ts-node server.ts",
-    "dev": "nodemon --exec ts-node server.ts"
+    "dev": "nodemon server.ts"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "python-shell": "^5.0.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.19",
+    "@types/node": "^20.11.16",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
